--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -44,10 +44,11 @@ body {
 }
 
 body {
-  background-color: $medio30;
-  color: $forte50;
+  background-color: $forte50;
+  color: $fraco20;
   overflow-x: hidden;
   font-size: 62.5%;
+  perspective: 20em;
 }
 
 body * {
@@ -70,10 +71,11 @@ main {
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-width: 1250px;
+  max-width: 700px;
   flex: 1;
   margin: 0 auto;
-  padding: 0 10px;
+  padding: 0 1rem;
 }
 
 @import 'geral';
+@import 'jogo';
