--- a/src/css/_jogo.scss
+++ b/src/css/_jogo.scss
@@ -55,5 +55,68 @@ $dim: 100px;
       transform: rotateY(180deg) !important;
     }
 
+    .parFormado {
+      z-index: 9000;
+      .face {
+        &:last-child {
+          animation: encontrado 1.5s ease-in;
+        }
+      }
+    }
+
+    .parNaoFormado {
+      z-index: 9000;
+      .face {
+        &:last-child {
+          animation: naoEncontrado 1s ease-in;
+        }
+      }
+    }
+
+  }
+}
+
+@keyframes encontrado {
+  0% {
+    transform: rotateY(180deg) scale(1) rotate(0);
+  }
+  50% {
+    transform: rotateY(180deg) scale(1.2) rotate(-3deg);
+  }
+  100% {
+    transform: rotateY(180deg) scale(1) rotate(0);
+  }
+}
+
+@keyframes naoEncontrado {
+  0% {
+    transform: rotateY(180deg) rotate(0);
+  }
+  10% {
+    transform: rotateY(180deg) rotate(-3deg);
+  }
+  20% {
+    transform: rotateY(180deg) rotate(3deg);
+  }
+  30% {
+    transform: rotateY(180deg) rotate(0);
+  }
+  40% {
+    transform: rotateY(180deg) rotate(-3deg);
+  }
+  50% {
+    transform: rotateY(180deg) rotate(3deg);
+  }
+  60% {
+    transform: rotateY(180deg) rotate(0);
+  }
+  70% {
+    transform: rotateY(180deg) rotate(-3deg);
+  }
+  80% {
+    transform: rotateY(180deg) rotate(3deg);
+  }
+  100% {
+    transform: rotateY(180deg) rotate(0);
   }
 }
