--- a/src/css/_footer.scss
+++ b/src/css/_footer.scss
@@ -5,8 +5,37 @@ footer {
   align-items: center;
   padding: 20px 0 40px 0;
 
-  p {
-    font-size: 0.9rem;
-    color: $fraco20;
+  div {
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+    background-color: $forte70;
+    padding: 5px 0;
+
+    p {
+      font-size: 0.9rem;
+      color: $fraco20;
+      padding-left: 20px;
+    }
   }
+
+  button {
+    padding: 5px 30px;
+    font-size: 0.9rem;
+    background-color: $forte90;
+    color: $fraco20;
+    text-transform: uppercase;
+
+    &:hover,
+    &:active {
+      background-color: $destaque;
+      color: $fraco20;
+    }
+  }
+
+  .jogar {
+    background-color: $especial;
+    color: $forte90;
+  }
+
 }
